kubernetes/infrastructure/branding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: branding
  namespace: branding
spec:
  type: ClusterIP
  selector:
    app: branding
  ports:
    - name: http
      port: 80
      targetPort: http
