kubernetes/infrastructure/branding/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: branding
  namespace: branding
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`branding.pxldi.de`)
      kind: Rule
      services:
        - name: branding
          port: 80
